<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.example.karim.cleanerjava.Activites.OtherActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:textSize="25dp"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/other_color"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:background="@drawable/spinner_border"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/spinnerCarModel"
                        android:textColor="@android:color/black"
                        android:text="@string/carModel"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/spinner_border"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:text="@string/carName"
                            android:textColor="@android:color/black"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_height="match_parent"
                            android:id="@+id/spinnerCarName"
                            android:layout_margin="10dp"/>
                    </LinearLayout>

                </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/text_border"
    android:layout_margin="5dp"
    android:layout_gravity="center">
    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:hint="@string/carNumber"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center"
        android:backgroundTint="@android:color/white"
        android:id="@+id/editTextCarNumber"/>
</LinearLayout>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">
                    <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/cleanFull"
                        />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkboxCleanFull"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:clickable="false"
                />
                </LinearLayout>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/price"
                    android:inputType="number"
                    android:editable="false"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:id="@+id/CleanFullPrice"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print"
                    android:visibility="gone"
                    android:layout_marginRight="15dp"
                    android:id="@+id/buttonCleanFull"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cleanOut"
                        android:textSize="20dp"
                        android:textColor="@android:color/black"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:id="@+id/checkboxCleanOut"
                android:clickable="false"
                />
                </LinearLayout>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColorHint="@android:color/black"
                    android:layout_marginRight="15dp"
                    android:text="@string/price"
                    android:gravity="center"
                    android:editable="false"
                    android:inputType="number"
                    android:id="@+id/CleanOutPrice"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print"
                    android:visibility="gone"
                    android:layout_marginRight="15dp"
                    android:id="@+id/buttonCleanOut"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cleanIn"
                        android:textSize="20dp"
                        android:textColor="@android:color/black"
                        />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/checkboxCleanIn"
                android:clickable="false"
                />
                </LinearLayout>

                <EditText
                    android:layout_width="wrap_content"
                    android:inputType="number"
                    android:layout_marginRight="15dp"
                    android:text="@string/price"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:textColorHint="@android:color/black"
                    android:id="@+id/CleanInPrice"
                    android:layout_height="wrap_content" />
                <Button
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print"
                    android:layout_marginRight="15dp"
                    android:id="@+id/buttonCleanIn"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="@string/glasesCleaner"
                        />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkboxGlasesCleaner"
                android:layout_centerVertical="true"
                android:clickable="false"
                />
                </LinearLayout>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/price"
                    android:gravity="center"
                    android:inputType="number"
                    android:editable="false"
                    android:textColorHint="@android:color/black"
                    android:id="@+id/PriceCleanGlasesCleaner"
                    android:layout_height="wrap_content" />
                <Button
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print"
                    android:layout_marginRight="15dp"
                    android:id="@+id/buttonGlasesCleaner"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:text="@string/caseMratbDoors"
                        android:textColor="@android:color/black"/>
            <CheckBox

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkboxCaseMratbDoors"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:clickable="false"
                />
                </LinearLayout>
            <EditText
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:inputType="number"
                android:layout_marginRight="15dp"
                android:text="@string/price"
                android:textColorHint="@android:color/black"
                android:gravity="center"
                android:id="@+id/PriceCaseMratbDoors"
                android:layout_height="wrap_content"
                android:editable="false"/>
                <Button
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print"
                    android:layout_marginRight="15dp"
                    android:id="@+id/buttonCaseMratbDoors"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$"
                        android:textColor="@android:color/black"
                        android:id="@+id/totalText"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/priceTotal"
                        android:textSize="20dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/print"
                    android:layout_gravity="center"
                    android:id="@+id/printTotla"
                    android:layout_centerInParent="true"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
