<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="com.example.karim.cleanerjava.HomeActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/button_bk"
            android:orientation="vertical"
            android:weightSum="3"
            android:padding="10dp"

            android:id="@+id/glassesLinear"
            android:layout_margin="5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:src="@drawable/glasses_color"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/glass"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:gravity="center"
                />

        </LinearLayout>
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/button_bk"
                    android:orientation="vertical"
                    android:weightSum="3"
                    android:padding="10dp"
                    android:id="@+id/WashLinear"
                    android:layout_margin="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/cleaning_color"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/cleaner"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/button_bk"
                    android:orientation="vertical"
                    android:weightSum="3"
                    android:padding="10dp"
                    android:id="@+id/busLinear"
                    android:layout_margin="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:src="@drawable/bus"
                        android:layout_weight="2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/bus"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/button_bk"
                    android:orientation="vertical"
                    android:weightSum="3"
                    android:padding="10dp"
                    android:id="@+id/familyLinear"
                    android:layout_margin="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:src="@drawable/family_car"
                        android:layout_weight="2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/familyCar"
                        android:layout_marginTop="10dp"
                        android:textSize="20dp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/button_bk"
                android:orientation="vertical"
                android:weightSum="3"
                android:padding="10dp"
                android:id="@+id/moneyLinear"
                android:layout_margin="5dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@drawable/money_color"
                    android:layout_weight="2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Money"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/button_bk"
                    android:orientation="vertical"
                    android:weightSum="3"
                    android:padding="10dp"
                    android:id="@+id/otherLinear"
                    android:layout_margin="5dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:src="@drawable/other_color"
                        android:layout_weight="2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/other"
                        android:layout_marginTop="10dp"
                        android:textSize="20dp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        />
                </LinearLayout>

            </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
    </ScrollView>
</LinearLayout>